--- a/templates/rank_candidates.html
+++ b/templates/rank_candidates.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenHire - Rank Candidates</title>
+    <link rel="icon" href="https://companieslogo.com/img/orig/FRHC-19d5c74f.png?t=1720244491">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
