--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -6,6 +6,7 @@
     <title>Search Results - OpenHire</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="https://companieslogo.com/img/orig/FRHC-19d5c74f.png?t=1720244491">
     <style>
         :root {
             --dark-green: #1a472a;
@@ -186,7 +187,7 @@
                 <tbody>
                     {% for resume in resumes %}
                     <tr>
-                        <td>{{ resume.id }}</td>
+                        <td><a href="{{ url_for('get_resume', filename=resume.id ~ '.pdf') }}" target="_blank">{{ resume.id }}</td>
                         <td><span class="email-cell">{{ resume.email }}</span></td>
                         <td><em>{{ resume.resume_text[:100] }}...</em></td>
                         <td class="score-cell">{{ resume.score }}</td>
